--- a/style.css
+++ b/style.css
@@ -1,3 +1,93 @@
-img {
-  position: inherit;
+@import url("https://fonts.googleapis.com/css2?family=Handjet:wght@700&family=Playfair+Display:ital@1&family=Roboto&display=swap");
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Playfair Display", sans-serif;
+}
+
+p {
+  color: rgb(255, 1, 1);
+}
+
+header {
+  background-image: url("./img/slider/img_bg_slider_home01.jpg");
+}
+
+.logo {
+  position: relative;
+  top: 20px;
+  left: 30px;
+}
+
+.phone-image {
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: 20px;
+  right: 350px;
+}
+
+/* BARRE DE NAVIGATION */
+.barre-nav {
+  text-transform: uppercase;
+}
+
+.menuderoulant {
+  height: 60px;
+  list-style: none;
+  padding: 10px;
+  margin: 40px;
+}
+
+.menuderoulant li {
+  float: left;
+  width: 80px;
+}
+
+.menuderoulant li a:link, .menuderoulant li a:visited {
+  display: block;
+  color: #FFFFFF;
+  background: transparent;
+  padding: 6px;
+  text-align: center;
+  text-decoration: none;
+}
+
+.menuderoulant li a:hover {
+  background-color: #684caa;
+}
+
+.menuderoulant li a:active {
+  background-color: transparent;
+}
+
+.menuderoulant .sub {
+  list-style-type: none;
+  display: none;
+  padding: 0;
+  margin: 0;
+  position: absolute;
+}
+
+.menuderoulant .sub li {
+  float: none;
+  margin: 0;
+  padding: 0;
+  border-top: 1px solid transparent;
+  border-right: 1px solid transparent;
+}
+
+.menuderoulant .sub li a:link, .menuderoulant li .sub a:visited {
+  display: block;
+  color: #FFFFFF;
+  text-decoration: none;
+  background-color: transparent;
+}
+
+.menuderoulant .sub li a:hover {
+  background-color: #684caa;
+}
+
+.menuderoulant li a:hover .sousmenu {
+  display: block;
 }/*# sourceMappingURL=style.css.map */
