--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Playfair Display", sans-serif;
+  width: 100%;
 }
 
 p {
@@ -11,12 +12,12 @@ p {
 
 header {
   background-image: url("./img/slider/img_bg_slider_home01.jpg");
+  width: 100%;
 }
 
 .logo {
   position: relative;
-  top: 20px;
-  left: 30px;
+  width: 100%;
 }
 
 .phone-image {
@@ -63,10 +64,8 @@ header {
 
 .menuderoulant .sub {
   list-style-type: none;
-  display: none;
   padding: 0;
   margin: 0;
-  position: absolute;
 }
 
 .menuderoulant .sub li {
