--- a/variables.scss
+++ b/variables.scss
@@ -1,11 +1,15 @@
-/*
+
 @import url('https://fonts.googleapis.com/css2?family=Handjet:wght@700&family=Playfair+Display:ital@1&family=Roboto&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,800&display=swap');
-*/
+
 
 $playfair: "Playfair Display", sans-serif; 
 $roboto: "Roboto", serif;
 $poppins: "Poppins", sans-serif;
 $open: "Open Sans", sans-serif;
 $kababi: #b88c5c;
+$black: #000000;
+$creme: #f0eae1;
+$white: #ffffff;
+
