--- a/style.css
+++ b/style.css
@@ -1,17 +1,19 @@
-/*
-@import url('https://fonts.googleapis.com/css2?family=Handjet:wght@700&family=Playfair+Display:ital@1&family=Roboto&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,800&display=swap');
-*/
+@import url("https://fonts.googleapis.com/css2?family=Handjet:wght@700&family=Playfair+Display:ital@1&family=Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,800&display=swap");
 body {
   margin: 0;
   padding: 0;
+  padding-right: 0;
   font-family: "Playfair Display", sans-serif;
   width: 100%;
 }
 
 p {
-  color: rgb(255, 1, 1);
+  color: rgb(0, 0, 0);
+  font-size: 15px;
+  display: flex;
+  justify-content: center;
 }
 
 header {
@@ -101,10 +103,79 @@ header {
 
 h2 {
   text-transform: uppercase;
-  font-family: "Courier New", Courier, monospace;
-  color: #684caa;
+  font-size: 30px;
+  font-family: "Poppins", sans-serif;
+  display: flex;
+  justify-content: center;
 }
 
+/*-------------------CHOOSE YOUR BEST CATEGORY----------------------*/
+.categories {
+  background-color: #f0eae1;
+  height: 2000px;
+}
+
+.category {
+  height: auto;
+  width: 30px;
+}
+
+.burger, .pizza-slice, .coffee-cup, .chicken-leg, .energy-drink, .shrimp {
+  display: flex;
+}
+
+aside {
+  display: flex;
+  justify-content: space-between;
+}
+aside .imgfood2 {
+  height: 800px;
+}
+aside .imgfood1 {
+  height: 200px;
+}
+aside .imgfood3 {
+  height: 200px;
+}
+
+/*-------------------WHY CHOOSE US----------------------*/
+.choose {
+  background-color: #ffffff;
+  margin: 0px auto;
+}
+
+/*-------------------TRY OUR SPECIAL OFFER----------------------*/
+.special {
+  background-color: #f0eae1;
+}
+
+/*-------------------RESTAURANT PHOTO GALLERY----------------------*/
+/*-------------------MEET PROFESSIONAL CHEFS----------------------*/
+.chef {
+  background-color: #000000;
+  height: 700px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+}
+
+.chef img {
+  height: 300px;
+  width: auto;
+}
+
+.chef h2 {
+  color: #ffffff;
+  position: center;
+}
+
+.chef p {
+  color: #ffffff;
+  position: center;
+}
+
+/*-------------------LASTEST NEWS & BLOG----------------------*/
 /*
 $playfair: 'Playfair Display', sans-serif; 
 $roboto: 'Roboto', serif;
