--- a/bis-ver.css
+++ b/bis-ver.css
@@ -129,6 +129,32 @@ body header .best-quality button {
   border: 1px solid rgba(245, 245, 245, 0.3);
   border-radius: 5px;
 }
+body .chef {
+  background-image: url("./img/our-chefs/imgbg-ourchefs.jpg");
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  height: 80vh;
+}
+body .chef h2 {
+  color: #f0eae1;
+  text-transform: uppercase;
+  font-family: "Playfair Display", sans-serif;
+  font-size: 3.5em;
+  margin-bottom: -2%;
+}
+body .chef .subtitle {
+  color: #f0eae1;
+  font-family: "Poppins", sans-serif;
+}
+body .chef .images-chefs {
+  padding-bottom: 5vw;
+}
+body .chef .images-chefs img {
+  margin: 0 0.8vw;
+}
 body footer {
   display: flex;
   flex-direction: column;
@@ -218,9 +244,30 @@ body footer .copyright .line-footer .line {
 }
 body footer .copyright .copyright-p {
   color: whitesmoke;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+body footer .copyright .copyright-p p {
+  color: whitesmoke;
 }
 body footer .copyright .copyright-p a {
   color: #b88c5c;
+}
+body footer .copyright .copyright-p .socials {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-right: 8%;
+}
+body footer .copyright .copyright-p .socials i {
+  padding: 22%;
+  margin-left: 10px;
+  border-radius: 100%;
+  background-color: rgba(58, 58, 58, 0.534);
+}
+body footer .copyright .copyright-p .socials .active {
+  background-color: #b88c5c;
 }
 body .fork {
   height: 10vh;
