--- a/bis-ver.scss
+++ b/bis-ver.scss
@@ -143,6 +143,37 @@ body {
     }
   }
 
+  .chef {
+    background-image: url("./img/our-chefs/imgbg-ourchefs.jpg");
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    height: 80vh;
+
+    h2 {
+      color: $creme;
+      text-transform: uppercase;
+      font-family: $playfair;
+      font-size: 3.5em;
+      margin-bottom: -2%;
+    }
+
+    .subtitle {
+      color: $creme;
+      font-family: $poppins;
+    }
+
+    .images-chefs {
+      padding-bottom: 5vw;
+
+      img {
+        margin: 0 .8vw;
+      }
+    }
+  }
+
   footer {
     display: flex;
     flex-direction: column;
@@ -181,28 +212,27 @@ body {
         }
 
         .form {
-            width: 100%;
+          width: 100%;
 
-            input {
-                width: 80%;
-                padding: 3% 2%;
-                background-color: whitesmoke;
-                border: 0;
-                margin-top: 2%;
-            }
+          input {
+            width: 80%;
+            padding: 3% 2%;
+            background-color: whitesmoke;
+            border: 0;
+            margin-top: 2%;
+          }
 
-            button {
-                width: 10%;
-                height: auto;
-                padding: 3% 4% 3% 4%;
-                text-align: center;
-                border-radius: 0;
-                border: 0;
-                background-color: $kababi;
-                color: whitesmoke;
-                font-weight: 500;
-                
-            }
+          button {
+            width: 10%;
+            height: auto;
+            padding: 3% 4% 3% 4%;
+            text-align: center;
+            border-radius: 0;
+            border: 0;
+            background-color: $kababi;
+            color: whitesmoke;
+            font-weight: 500;
+          }
         }
       }
 
@@ -223,35 +253,54 @@ body {
       }
     }
 
-    
-
     .copyright {
-        height: fit-content;
-        width: 90%;
-        padding: 1.5% 0;
+      height: fit-content;
+      width: 90%;
+      padding: 1.5% 0;
 
-        .line-footer {
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-            .line {
-                border-top: 1px solid rgba(245, 245, 245, 0.2);
-                height: 100%;
-                width: 100%;
-            }
-            
-            
+      .line-footer {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        .line {
+          border-top: 1px solid rgba(245, 245, 245, 0.2);
+          height: 100%;
+          width: 100%;
         }
-
-        
+      }
 
       .copyright-p {
         color: whitesmoke;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+
+        p {
+          color: whitesmoke;
+        }
 
         a {
           color: $kababi;
+        }
+
+        .socials {
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          margin-right: 8%;
+
+          i {
+            padding: 22%;
+            margin-left: 10px;
+            border-radius: 100%;
+            background-color: rgba(58, 58, 58, 0.534);
+          }
+
+          .active {
+            background-color: $kababi;
+          }
         }
       }
     }
@@ -259,5 +308,5 @@ body {
 
   .fork {
     height: 10vh;
-}
+  }
 }
