--- a/bis-ver.scss
+++ b/bis-ver.scss
@@ -4,6 +4,7 @@
   margin: 0;
   padding: 0;
   list-style: none;
+  box-sizing: border-box;
   text-decoration: none;
   color: black;
   font-family: $poppins;
@@ -174,6 +175,382 @@ body {
     }
   }
 
+  .categories {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    background-image: linear-gradient(#f0eae1be, #f0eae12c),
+      url("./img/banner/imgbgcategory.jpg");
+    width: 100%;
+    height: 100vh;
+
+    h2 {
+      font-family: $playfair;
+      font-size: 3em;
+      margin-top: -25%;
+    }
+
+    p {
+      text-align: center;
+      margin-top: 3%;
+    }
+
+    .category-item {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      align-items: center;
+      margin: 0 auto;
+      width: 80%;
+
+      section {
+        width: fit-content;
+        div {
+          display: flex;
+          flex-direction: column;
+          justify-content: space-evenly;
+          align-items: center;
+          background-color: white;
+          width: 120%;
+          padding: 2vh 0.5vw;
+          height: 20vh;
+
+          img {
+            width: 30%;
+          }
+
+          .arrow-cat {
+            width: 10%;
+          }
+        }
+      }
+    }
+  }
+
+  .img-food {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-bottom: 10%;
+
+    img {
+      width: 20%;
+    }
+    .imgfood2 {
+      width: 40%;
+      margin-top: -10%;
+      border-radius: 100%;
+      border-top: 40px solid white;
+    }
+  }
+
+  .gallery {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    margin: auto;
+    margin-top: 5%;
+    padding-bottom: 4%;
+
+    h2 {
+      font-family: $playfair;
+      font-size: 3em;
+      margin-bottom: 2%;
+      text-transform: uppercase;
+    }
+
+    p {
+      margin-bottom: 5%;
+    }
+
+    button {
+      min-width: fit-content;
+      width: 15vw;
+      background-color: rgba(255, 255, 255, 0.05);
+      color: black;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      font-family: $open;
+      padding: 1vw 1.8vw;
+      text-transform: uppercase;
+      font-weight: 500;
+      border: 1px solid rgba(48, 48, 48, 0.151);
+      border-radius: 5px;
+      margin: 8% 0;
+      font-weight: 600;
+
+    }
+
+    .part1 {
+      display: flex;
+      flex-direction: row;
+      width: 100%;
+      justify-content: space-evenly;
+      align-items: center;
+      margin-bottom: 2%;
+      gap: 2%;
+    }
+
+    .gallery-photo-1 {
+      background-image: linear-gradient(
+          180deg,
+          rgba(0, 0, 0, 1),
+          rgba(0, 0, 0, 0.2)
+        ),
+        url("./img/gallery/img1gallerybox.jpg");
+      background-size: cover;
+      background-repeat: no-repeat;
+      height: 50vh;
+      width: 50%;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
+      align-items: center;
+
+      h3,
+      p {
+        color: whitesmoke;
+      }
+
+      p {
+        margin-bottom: 15%;
+        font-weight: 600;
+      }
+
+      h3 {
+        font-family: $playfair;
+        font-size: 2.5em;
+        margin-bottom: 2%;
+      }
+    }
+    .gallery-photo-2 {
+      background-image: url("./img/gallery/img2gallerybox.jpg");
+      background-repeat: no-repeat;
+      background-size: cover;
+      height: 50vh;
+      width: 23%;
+    }
+
+    .gallery-photo-3 {
+      background-image: url("./img/gallery/img3gallerybox.jpg");
+      background-repeat: no-repeat;
+      background-size: cover;
+      height: 50vh;
+      width: 23%;
+    }
+    .part2 {
+      display: flex;
+      flex-direction: row;
+      width: 100%;
+      justify-content: space-evenly;
+      margin: auto;
+      gap: 2%;
+    }
+
+    .gallery-photo-4 {
+      background-image: url("./img/gallery/img4gallerybox.jpg");
+      background-repeat: no-repeat;
+      background-size: cover;
+      height: 50vh;
+      width: 25%;
+    }
+
+    .gallery-photo-5 {
+      background-image: url("./img/gallery/img5gallerybox.jpg");
+      background-repeat: no-repeat;
+      background-size: cover;
+      height: 50vh;
+      width: 25%;
+    }
+
+    .gallery-photo-6 {
+      background-image: url("./img/gallery/img6gallerybox.jpg");
+      background-repeat: no-repeat;
+      background-size: cover;
+      height: 50vh;
+      width: 50%;
+    }
+  }
+
+  .news{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+
+    h2{
+      font-family: $playfair;
+      font-size: 3em;
+      margin-bottom: 1%;
+      margin-top: 3%;
+    }
+
+    p{
+      text-align: center;
+      margin-bottom: 5%;
+    }
+
+    .card-container{
+      display: flex;
+      flex-direction: row;
+      width: 80%;
+      justify-content: center;
+      gap: 2%;
+      align-items: center;
+      margin-bottom: 5%;
+
+      .card{
+        width: 25%;
+        display: flex;
+        flex-direction: column;
+        background-color: #fffaf0;
+
+        .metadata{
+          display: flex;
+          flex-direction: row;
+          gap: 2%;
+          width: 80%;
+          margin: 5% auto;
+          align-items: center;
+
+          .img-meta{
+            width: 5%;
+          }
+        }
+        
+        h3{
+          width: 80%;
+          margin: auto;
+        }
+
+        button{
+          display: flex;
+          flex-direction: row;
+          justify-content: space-between;
+          margin-bottom: 15%;
+          width: 10vw;
+          padding: 1vw 1.8vw;
+          margin-left: 10%;
+          margin-top: 15%;
+          background-color: white;
+          border: none;
+          text-transform: uppercase;
+          font-weight: 600;
+          border-radius: 5px;
+
+          img{
+            width: 15%;
+            height: auto;
+          }
+        }
+
+        .btn-active{
+          background-color: $kababi;
+          color: whitesmoke;
+        }
+      }
+    }
+
+    .brand{
+      width: 70%;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
+      margin-bottom: 7%;
+    }
+  }
+
+  .special {
+    display: flex;
+    flex-direction: column;
+    // justify-content: center;
+    align-items: center;
+    margin-bottom: 25%;
+    width: 100%;
+    margin: auto;
+    height: 100vh;
+    background-color: #fffaf0;
+
+    h2 {
+      font-family: $playfair;
+      font-size: 3em;
+      margin-top: 5%;
+      margin-bottom: 2%;
+      text-transform: uppercase;
+    }
+
+    .steak, .bread {
+      position: absolute;
+      
+    }
+
+    .bread {
+      right: 0;
+      width: 30%;
+      height: 100vh;
+    }
+
+    .steak {
+      left: 0;
+      top: 445%;
+    }
+
+    .menu-flex {
+      display: flex;
+      flex-direction: row;
+      gap: 2%;
+      width: 80%;
+      z-index: 999;
+
+      .left, .right {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+
+        .special-menu {
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          justify-content: space-between;
+          width: 100%;
+          background-color: white;
+          margin-top: 3%;
+          padding: 5%;
+          border-radius: 10px;
+
+          .description {
+            width: 75%;
+
+            h4 {
+              font-size: 1.2em;
+              font-family: $playfair;
+              margin-bottom: 1.5%;
+            }
+          }
+
+          .price {
+            font-size: 2.8em;
+            color: $kababi;
+            font-weight: 600;
+          }
+        }
+
+        .dashed {
+          border: 3px dashed $kababi;
+        }
+      }
+    }
+
+  }
+
   .choose {
     background-color: rgb(247, 247, 247);
     display: flex;
@@ -199,7 +576,6 @@ body {
     .choose-us {
       display: flex;
       flex-direction: row;
-      // flex-wrap: wrap;
       width: 100%;
       justify-content: center;
       align-items: center;
@@ -217,7 +593,6 @@ body {
       }
 
       button {
-        // display: block;
         margin-top: 10%;
         display: flex;
         flex-direction: row;
