--- a/bis-ver.scss
+++ b/bis-ver.scss
@@ -114,7 +114,7 @@ body {
         h1 {
           font-size: 6rem;
           color: whitesmoke;
-          font-family: $playfair;
+          font-family: $cormorant;
           text-transform: uppercase;
         }
 
@@ -153,10 +153,21 @@ body {
     width: 100%;
     height: 80vh;
 
+    .background-text-chefs {
+      font-family: $cormorant;
+      font-size: 16em;
+      position: absolute;
+      left: 0;
+      opacity: 0.5;
+      top: 645%;
+      color: rgb(53, 53, 52);
+      z-index: 0;
+    }
+
     h2 {
       color: $creme;
       text-transform: uppercase;
-      font-family: $playfair;
+      font-family: $cormorant;
       font-size: 3.5em;
       margin-bottom: -2%;
     }
@@ -184,11 +195,26 @@ body {
       url("./img/banner/imgbgcategory.jpg");
     width: 100%;
     height: 100vh;
+    z-index: 1;
+
+    .background-text-category {
+      font-family: $cormorant;
+      font-size: 18em;
+      position: absolute;
+      left: 0;
+      top: 80%;
+      opacity: 0.4;
+      color: rgb(212, 193, 156);
+      z-index: 0;
+    }
 
     h2 {
-      font-family: $playfair;
+      font-family: $cormorant;
       font-size: 3em;
       margin-top: -25%;
+      text-transform: uppercase;
+      z-index: 50;
+      margin-top: 0;
     }
 
     p {
@@ -206,6 +232,14 @@ body {
 
       section {
         width: fit-content;
+        height: 40vh;
+        font-family: $cormorant;
+
+        h4 {
+          font-family: $cormorant;
+          font-size: 1.2em;
+        }
+
         div {
           display: flex;
           flex-direction: column;
@@ -214,7 +248,7 @@ body {
           background-color: white;
           width: 120%;
           padding: 2vh 0.5vw;
-          height: 20vh;
+          height: 25vh;
 
           img {
             width: 30%;
@@ -257,8 +291,19 @@ body {
     margin-top: 5%;
     padding-bottom: 4%;
 
+    .background-text-gallery {
+      font-family: $cormorant;
+      font-size: 16em;
+      position: absolute;
+      left: 0;
+      top: 480%;
+      opacity: 0.5;
+      color: rgb(212, 193, 156);
+      z-index: 0;
+    }
+
     h2 {
-      font-family: $playfair;
+      font-family: $cormorant;
       font-size: 3em;
       margin-bottom: 2%;
       text-transform: uppercase;
@@ -325,7 +370,7 @@ body {
       }
 
       h3 {
-        font-family: $playfair;
+        font-family: $cormorant;
         font-size: 2.5em;
         margin-bottom: 2%;
       }
@@ -386,11 +431,23 @@ body {
     align-items: center;
     width: 100%;
 
+    .background-text-blog {
+      font-family: $cormorant;
+      font-size: 16em;
+      position: absolute;
+      left: 0;
+      top: 730%;
+      opacity: 0.5;
+      color: rgb(212, 193, 156);
+      z-index: 0;
+    }
+
     h2{
-      font-family: $playfair;
+      font-family: $cormorant;
       font-size: 3em;
       margin-bottom: 1%;
       margin-top: 3%;
+      text-transform: uppercase;
     }
 
     p{
@@ -429,6 +486,8 @@ body {
         h3{
           width: 80%;
           margin: auto;
+          font-family: $cormorant;
+          font-size: 1.3em;
         }
 
         button{
@@ -479,8 +538,18 @@ body {
     height: 100vh;
     background-color: #fffaf0;
 
+    .background-text-menu {
+      font-family: $cormorant;
+      font-size: 16em;
+      position: absolute;
+      left: 0;
+      opacity: 0.5;
+      color: rgb(212, 193, 156);
+      z-index: 0;
+    }
+
     h2 {
-      font-family: $playfair;
+      font-family: $cormorant;
       font-size: 3em;
       margin-top: 5%;
       margin-bottom: 2%;
@@ -500,7 +569,8 @@ body {
 
     .steak {
       left: 0;
-      top: 445%;
+      top: 430%;
+      z-index: 50;
     }
 
     .menu-flex {
@@ -531,7 +601,7 @@ body {
 
             h4 {
               font-size: 1.2em;
-              font-family: $playfair;
+              font-family: $cormorant;
               margin-bottom: 1.5%;
             }
           }
@@ -552,7 +622,7 @@ body {
   }
 
   .choose {
-    background-color: rgb(247, 247, 247);
+    background-color: white;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -560,17 +630,38 @@ body {
     padding-bottom: 8%;
     padding-top: 3%;
 
+    .background-text-choose {
+      font-family: $cormorant;
+      font-size: 18em;
+      position: absolute;
+      left: 0;
+      top: 256%;
+      opacity: 0.5;
+      color: rgb(212, 193, 156);
+      z-index: 0;
+    }
+
+    .quality-about {
+      position: absolute;
+      right: 12%;
+      margin-bottom: 45%;
+    }
+
     h2 {
       font-size: 3em;
-      font-family: $playfair;
+      font-family: $cormorant;
       margin-bottom: 5%;
       text-align: center;
       margin-top: 5%;
+      text-transform: uppercase;
     }
 
     p {
-      margin-bottom: 10%;
+      margin-bottom: 8%;
       text-align: center;
+      font-family: $forum;
+      width: 100%;
+      // font-size: 80%;
     }
 
     .choose-us {
@@ -581,14 +672,14 @@ body {
       align-items: center;
 
       p {
-        width: 25%;
+        width: 33%;
         text-align: left;
         display: block;
         margin-left: 5%;
         font-size: 1.8em;
         font-family: serif;
         letter-spacing: 3px;
-        line-height: 48px;
+        line-height: 42px;
         margin-top: 8%;
       }
 
@@ -685,7 +776,7 @@ body {
         }
 
         h3 {
-          font-family: $playfair;
+          font-family: $cormorant;
           color: whitesmoke;
           margin-bottom: 5%;
           font-size: 2em;
